--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "typescript": "^4.4.3"
   },
   "dependencies": {
+    "clipanion": "^3.2.0",
     "walkjs": "^4.0.5",
     "yaml": "^2.2.1",
     "yargs": "^17.7.1"
