--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "dist",
     "declaration": true,
     "emitDeclarationOnly": true,
+    "incremental": true
   },
   "include": ["src/*"]
 }
